--- a/brushless_src/brushless_src.ioc
+++ b/brushless_src/brushless_src.ioc
@@ -1,40 +1,79 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.ContinuousConvMode=DISABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,SamplingTimeOPAMP-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=3
+ADC1.NbrOfConversionFlag=1
+ADC1.Offset-0\#ChannelRegularConversion=0
+ADC1.Offset-1\#ChannelRegularConversion=0
+ADC1.Offset-2\#ChannelRegularConversion=0
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.SamplingTimeOPAMP-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC1.SamplingTimeOPAMP-2\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F302R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14 - OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PC12
-Mcu.Pin17=PB3
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PB0
+Mcu.Pin11=PB13
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PC12
 Mcu.Pin2=PC15 - OSC32_OUT
+Mcu.Pin20=PB3
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA6
-Mcu.Pin8=PB13
-Mcu.Pin9=PA8
-Mcu.PinsNb=19
+Mcu.Pin5=PC3
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -79,6 +118,11 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=DIAG_EN
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=BEMF3
+PA7.Locked=true
+PA7.Mode=IN15-Single-Ended
+PA7.Signal=ADC1_IN15
 PA8.GPIOParameters=GPIO_Speed,GPIO_Label
 PA8.GPIO_Label=IN1
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -88,6 +132,11 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=IN2
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=BEMF2
+PB0.Locked=true
+PB0.Mode=IN11-Single-Ended
+PB0.Signal=ADC1_IN11
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=LD2 [Green Led]
 PB13.Locked=true
@@ -120,6 +169,10 @@ PC14\ -\ OSC32_IN.Signal=RCC_OSC32_IN
 PC15\ -\ OSC32_OUT.Locked=true
 PC15\ -\ OSC32_OUT.Mode=LSE-External-Oscillator
 PC15\ -\ OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=BEMF1
+PC3.Locked=true
+PC3.Signal=ADCx_IN9
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -153,7 +206,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -165,7 +218,7 @@ RCC.CortexFreq_Value=64000000
 RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=64000000
-RCC.HSEPLLFreq_Value=4000000
+RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
@@ -173,7 +226,7 @@ RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
 RCC.I2SClocksFreq_Value=64000000
-RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=64000000
 RCC.PLLCLKFreq_Value=64000000
@@ -183,7 +236,6 @@ RCC.PLLMUL=RCC_PLL_MUL16
 RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
-RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
 RCC.SYSCLKFreq_VALUE=64000000
@@ -198,6 +250,8 @@ RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=64000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
