adc triggered by timer

--- a/brushless_src/brushless_src.ioc
+++ b/brushless_src/brushless_src.ioc
@@ -3,7 +3,9 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_15
 ADC1.ContinuousConvMode=DISABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,SamplingTimeOPAMP-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,SamplingTimeOPAMP-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,NbrOfConversion,SubFamily,DMAContinuousRequests,ExternalTrigConv
 ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
@@ -15,20 +17,21 @@ ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
 ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
 ADC1.SamplingTimeOPAMP-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.SamplingTimeOPAMP-2\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC1.SubFamily=STM32F302x8
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
@@ -40,8 +43,9 @@ Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F302R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -58,7 +62,9 @@ Mcu.Pin18=PC11
 Mcu.Pin19=PC12
 Mcu.Pin2=PC15 - OSC32_OUT
 Mcu.Pin20=PB3
-Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PC3
@@ -66,14 +72,14 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -146,6 +152,10 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=DEBUG_PIN
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=EN1
 PC10.Locked=true
@@ -207,17 +217,17 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
-RCC.ADC12outputFreq_Value=64000000
-RCC.AHBFreq_Value=64000000
+RCC.ADC12outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
-RCC.CortexFreq_Value=64000000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
+RCC.HCLKFreq_Value=72000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
@@ -225,39 +235,45 @@ RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
-RCC.I2SClocksFreq_Value=64000000
-RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.I2SClocksFreq_Value=72000000
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
-RCC.MCOFreq_Value=64000000
-RCC.PLLCLKFreq_Value=64000000
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
 RCC.PLLM=8
-RCC.PLLMCOFreq_Value=64000000
-RCC.PLLMUL=RCC_PLL_MUL16
+RCC.PLLMCOFreq_Value=72000000
+RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=64000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM15Freq_Value=64000000
-RCC.TIM16Freq_Value=64000000
-RCC.TIM17Freq_Value=64000000
-RCC.TIM1Freq_Value=64000000
-RCC.TIM2Freq_Value=64000000
-RCC.USART1Freq_Value=32000000
+RCC.TIM15Freq_Value=72000000
+RCC.TIM16Freq_Value=72000000
+RCC.TIM17Freq_Value=72000000
+RCC.TIM1Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.USART1Freq_Value=36000000
 RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
-RCC.USBFreq_Value=64000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM1.IPParameters=Period,TIM_MasterOutputTrigger
+TIM1.Period=7199
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=NUCLEO-F302R8
 boardIOC=true
 isbadioc=false
