--- a/brushless_src/brushless_src.ioc
+++ b/brushless_src/brushless_src.ioc
@@ -268,7 +268,8 @@ SH.GPXTI13.ConfNb=1
 TIM1.IPParameters=Period,TIM_MasterOutputTrigger
 TIM1.Period=3599
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.BaudRate=115200
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
