--- a/brushless_src/brushless_src.ioc
+++ b/brushless_src/brushless_src.ioc
@@ -52,19 +52,20 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14 - OSC32_IN
 Mcu.Pin10=PB0
 Mcu.Pin11=PB13
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PC10
-Mcu.Pin18=PC11
-Mcu.Pin19=PC12
+Mcu.Pin12=PC9
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PC15 - OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin20=PC12
+Mcu.Pin21=PB3
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PC3
@@ -72,7 +73,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
@@ -183,6 +184,10 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=BEMF1
 PC3.Locked=true
 PC3.Signal=ADCx_IN9
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=GPIO_BEMF
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
